<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="ST_OEE" Id="{e89e9e6d-8bae-436b-bb37-f0ee66be7941}">
    <Declaration><![CDATA[TYPE ST_OEE :
STRUCT
	Inputs										: ST_OEE_In;
	Outputs										: ST_OEE_Out;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>